# sdl-tut

./: CMakeLists.txt  README.md
SDL2-2.0.5/cmake/: sdlchecks.cmake
eglstreams/: CMakeLists.txt
sdl2_demo/: CMakeLists.txt  sdl2_demo.cpp  sdl2_gl.h
sdl2_egl/: CMakeLists.txt  FragmentShader.txt  Shader.h  VertexShader.txt  main.cpp  sdl2_egl.cpp  sdl2_egl.h  sdl2_engine.cpp  sdl2_engine.h
sdl2_engine/: CMakeLists.txt  sdl2_engine.cpp  sdl2_engine.h
sdl2_gl/: CMakeLists.txt  Shader.h  main.cpp  sdl2_gl.cpp  sdl2_gl.h
wayland_egl/: CMakeLists.txt  main.cpp
